--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
+    "requirejs": "^2.3.6",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0"
   },
